runtime/tests/suite/float_literals.bin.wast
(module binary
  "\00\61\73\6d\01\00\00\00\01\91\80\80\80\00\04\60"
  "\00\01\7f\60\00\01\7e\60\00\01\7d\60\00\01\7c\03"
  "\d1\80\80\80\00\50\00\00\00\00\00\00\00\00\00\00"
  "\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00\00"
  "\00\00\00\00\01\01\01\01\01\01\01\01\01\01\01\01"
  "\01\01\01\01\01\01\01\01\01\01\01\01\01\01\01\01"
  "\01\01\02\02\02\02\02\02\02\02\02\02\03\03\03\03"
  "\03\03\03\03\03\03\07\c9\8b\80\80\00\50\07\66\33"
  "\32\2e\6e\61\6e\00\00\10\66\33\32\2e\70\6f\73\69"
  "\74\69\76\65\5f\6e\61\6e\00\01\10\66\33\32\2e\6e"
  "\65\67\61\74\69\76\65\5f\6e\61\6e\00\02\0d\66\33"
  "\32\2e\70\6c\61\69\6e\5f\6e\61\6e\00\03\22\66\33"
  "\32\2e\69\6e\66\6f\72\6d\61\6c\6c\79\5f\6b\6e\6f"
  "\77\6e\5f\61\73\5f\70\6c\61\69\6e\5f\73\6e\61\6e"
  "\00\04\10\66\33\32\2e\61\6c\6c\5f\6f\6e\65\73\5f"
  "\6e\61\6e\00\05\0c\66\33\32\2e\6d\69\73\63\5f\6e"
  "\61\6e\00\06\15\66\33\32\2e\6d\69\73\63\5f\70\6f"
  "\73\69\74\69\76\65\5f\6e\61\6e\00\07\15\66\33\32"
  "\2e\6d\69\73\63\5f\6e\65\67\61\74\69\76\65\5f\6e"
  "\61\6e\00\08\0c\66\33\32\2e\69\6e\66\69\6e\69\74"
  "\79\00\09\15\66\33\32\2e\70\6f\73\69\74\69\76\65"
  "\5f\69\6e\66\69\6e\69\74\79\00\0a\15\66\33\32\2e"
  "\6e\65\67\61\74\69\76\65\5f\69\6e\66\69\6e\69\74"
  "\79\00\0b\08\66\33\32\2e\7a\65\72\6f\00\0c\11\66"
  "\33\32\2e\70\6f\73\69\74\69\76\65\5f\7a\65\72\6f"
  "\00\0d\11\66\33\32\2e\6e\65\67\61\74\69\76\65\5f"
  "\7a\65\72\6f\00\0e\08\66\33\32\2e\6d\69\73\63\00"
  "\0f\10\66\33\32\2e\6d\69\6e\5f\70\6f\73\69\74\69"
  "\76\65\00\10\0e\66\33\32\2e\6d\69\6e\5f\6e\6f\72"
  "\6d\61\6c\00\11\0e\66\33\32\2e\6d\61\78\5f\66\69"
  "\6e\69\74\65\00\12\11\66\33\32\2e\6d\61\78\5f\73"
  "\75\62\6e\6f\72\6d\61\6c\00\13\10\66\33\32\2e\74"
  "\72\61\69\6c\69\6e\67\5f\64\6f\74\00\14\0c\66\33"
  "\32\5f\64\65\63\2e\7a\65\72\6f\00\15\15\66\33\32"
  "\5f\64\65\63\2e\70\6f\73\69\74\69\76\65\5f\7a\65"
  "\72\6f\00\16\15\66\33\32\5f\64\65\63\2e\6e\65\67"
  "\61\74\69\76\65\5f\7a\65\72\6f\00\17\0c\66\33\32"
  "\5f\64\65\63\2e\6d\69\73\63\00\18\14\66\33\32\5f"
  "\64\65\63\2e\6d\69\6e\5f\70\6f\73\69\74\69\76\65"
  "\00\19\12\66\33\32\5f\64\65\63\2e\6d\69\6e\5f\6e"
  "\6f\72\6d\61\6c\00\1a\15\66\33\32\5f\64\65\63\2e"
  "\6d\61\78\5f\73\75\62\6e\6f\72\6d\61\6c\00\1b\12"
  "\66\33\32\5f\64\65\63\2e\6d\61\78\5f\66\69\6e\69"
  "\74\65\00\1c\14\66\33\32\5f\64\65\63\2e\74\72\61"
  "\69\6c\69\6e\67\5f\64\6f\74\00\1d\07\66\36\34\2e"
  "\6e\61\6e\00\1e\10\66\36\34\2e\70\6f\73\69\74\69"
  "\76\65\5f\6e\61\6e\00\1f\10\66\36\34\2e\6e\65\67"
  "\61\74\69\76\65\5f\6e\61\6e\00\20\0d\66\36\34\2e"
  "\70\6c\61\69\6e\5f\6e\61\6e\00\21\22\66\36\34\2e"
  "\69\6e\66\6f\72\6d\61\6c\6c\79\5f\6b\6e\6f\77\6e"
  "\5f\61\73\5f\70\6c\61\69\6e\5f\73\6e\61\6e\00\22"
  "\10\66\36\34\2e\61\6c\6c\5f\6f\6e\65\73\5f\6e\61"
  "\6e\00\23\0c\66\36\34\2e\6d\69\73\63\5f\6e\61\6e"
  "\00\24\15\66\36\34\2e\6d\69\73\63\5f\70\6f\73\69"
  "\74\69\76\65\5f\6e\61\6e\00\25\15\66\36\34\2e\6d"
  "\69\73\63\5f\6e\65\67\61\74\69\76\65\5f\6e\61\6e"
  "\00\26\0c\66\36\34\2e\69\6e\66\69\6e\69\74\79\00"
  "\27\15\66\36\34\2e\70\6f\73\69\74\69\76\65\5f\69"
  "\6e\66\69\6e\69\74\79\00\28\15\66\36\34\2e\6e\65"
  "\67\61\74\69\76\65\5f\69\6e\66\69\6e\69\74\79\00"
  "\29\08\66\36\34\2e\7a\65\72\6f\00\2a\11\66\36\34"
  "\2e\70\6f\73\69\74\69\76\65\5f\7a\65\72\6f\00\2b"
  "\11\66\36\34\2e\6e\65\67\61\74\69\76\65\5f\7a\65"
  "\72\6f\00\2c\08\66\36\34\2e\6d\69\73\63\00\2d\10"
  "\66\36\34\2e\6d\69\6e\5f\70\6f\73\69\74\69\76\65"
  "\00\2e\0e\66\36\34\2e\6d\69\6e\5f\6e\6f\72\6d\61"
  "\6c\00\2f\11\66\36\34\2e\6d\61\78\5f\73\75\62\6e"
  "\6f\72\6d\61\6c\00\30\0e\66\36\34\2e\6d\61\78\5f"
  "\66\69\6e\69\74\65\00\31\10\66\36\34\2e\74\72\61"
  "\69\6c\69\6e\67\5f\64\6f\74\00\32\0c\66\36\34\5f"
  "\64\65\63\2e\7a\65\72\6f\00\33\15\66\36\34\5f\64"
  "\65\63\2e\70\6f\73\69\74\69\76\65\5f\7a\65\72\6f"
  "\00\34\15\66\36\34\5f\64\65\63\2e\6e\65\67\61\74"
  "\69\76\65\5f\7a\65\72\6f\00\35\0c\66\36\34\5f\64"
  "\65\63\2e\6d\69\73\63\00\36\14\66\36\34\5f\64\65"
  "\63\2e\6d\69\6e\5f\70\6f\73\69\74\69\76\65\00\37"
  "\12\66\36\34\5f\64\65\63\2e\6d\69\6e\5f\6e\6f\72"
  "\6d\61\6c\00\38\15\66\36\34\5f\64\65\63\2e\6d\61"
  "\78\5f\73\75\62\6e\6f\72\6d\61\6c\00\39\12\66\36"
  "\34\5f\64\65\63\2e\6d\61\78\5f\66\69\6e\69\74\65"
  "\00\3a\14\66\36\34\5f\64\65\63\2e\74\72\61\69\6c"
  "\69\6e\67\5f\64\6f\74\00\3b\0c\66\33\32\2d\64\65"
  "\63\2d\73\65\70\31\00\3c\0c\66\33\32\2d\64\65\63"
  "\2d\73\65\70\32\00\3d\0c\66\33\32\2d\64\65\63\2d"
  "\73\65\70\33\00\3e\0c\66\33\32\2d\64\65\63\2d\73"
  "\65\70\34\00\3f\0c\66\33\32\2d\64\65\63\2d\73\65"
  "\70\35\00\40\0c\66\33\32\2d\68\65\78\2d\73\65\70"
  "\31\00\41\0c\66\33\32\2d\68\65\78\2d\73\65\70\32"
  "\00\42\0c\66\33\32\2d\68\65\78\2d\73\65\70\33\00"
  "\43\0c\66\33\32\2d\68\65\78\2d\73\65\70\34\00\44"
  "\0c\66\33\32\2d\68\65\78\2d\73\65\70\35\00\45\0c"
  "\66\36\34\2d\64\65\63\2d\73\65\70\31\00\46\0c\66"
  "\36\34\2d\64\65\63\2d\73\65\70\32\00\47\0c\66\36"
  "\34\2d\64\65\63\2d\73\65\70\33\00\48\0c\66\36\34"
  "\2d\64\65\63\2d\73\65\70\34\00\49\0c\66\36\34\2d"
  "\64\65\63\2d\73\65\70\35\00\4a\0c\66\36\34\2d\68"
  "\65\78\2d\73\65\70\31\00\4b\0c\66\36\34\2d\68\65"
  "\78\2d\73\65\70\32\00\4c\0c\66\36\34\2d\68\65\78"
  "\2d\73\65\70\33\00\4d\0c\66\36\34\2d\68\65\78\2d"
  "\73\65\70\34\00\4e\0c\66\36\34\2d\68\65\78\2d\73"
  "\65\70\35\00\4f\0a\9d\89\80\80\00\50\88\80\80\80"
  "\00\00\43\00\00\c0\7f\bc\0b\88\80\80\80\00\00\43"
  "\00\00\c0\7f\bc\0b\88\80\80\80\00\00\43\00\00\c0"
  "\ff\bc\0b\88\80\80\80\00\00\43\00\00\c0\7f\bc\0b"
  "\88\80\80\80\00\00\43\00\00\a0\7f\bc\0b\88\80\80"
  "\80\00\00\43\ff\ff\ff\ff\bc\0b\88\80\80\80\00\00"
  "\43\45\23\81\7f\bc\0b\88\80\80\80\00\00\43\50\40"
  "\b0\7f\bc\0b\88\80\80\80\00\00\43\de\bc\aa\ff\bc"
  "\0b\88\80\80\80\00\00\43\00\00\80\7f\bc\0b\88\80"
  "\80\80\00\00\43\00\00\80\7f\bc\0b\88\80\80\80\00"
  "\00\43\00\00\80\ff\bc\0b\88\80\80\80\00\00\43\00"
  "\00\00\00\bc\0b\88\80\80\80\00\00\43\00\00\00\00"
  "\bc\0b\88\80\80\80\00\00\43\00\00\00\80\bc\0b\88"
  "\80\80\80\00\00\43\db\0f\c9\40\bc\0b\88\80\80\80"
  "\00\00\43\01\00\00\00\bc\0b\88\80\80\80\00\00\43"
  "\00\00\80\00\bc\0b\88\80\80\80\00\00\43\ff\ff\7f"
  "\7f\bc\0b\88\80\80\80\00\00\43\ff\ff\7f\00\bc\0b"
  "\88\80\80\80\00\00\43\00\00\80\44\bc\0b\88\80\80"
  "\80\00\00\43\00\00\00\00\bc\0b\88\80\80\80\00\00"
  "\43\00\00\00\00\bc\0b\88\80\80\80\00\00\43\00\00"
  "\00\80\bc\0b\88\80\80\80\00\00\43\db\0f\c9\40\bc"
  "\0b\88\80\80\80\00\00\43\01\00\00\00\bc\0b\88\80"
  "\80\80\00\00\43\00\00\80\00\bc\0b\88\80\80\80\00"
  "\00\43\ff\ff\7f\00\bc\0b\88\80\80\80\00\00\43\ff"
  "\ff\7f\7f\bc\0b\88\80\80\80\00\00\43\f9\02\15\50"
  "\bc\0b\8c\80\80\80\00\00\44\00\00\00\00\00\00\f8"
  "\7f\bd\0b\8c\80\80\80\00\00\44\00\00\00\00\00\00"
  "\f8\7f\bd\0b\8c\80\80\80\00\00\44\00\00\00\00\00"
  "\00\f8\ff\bd\0b\8c\80\80\80\00\00\44\00\00\00\00"
  "\00\00\f8\7f\bd\0b\8c\80\80\80\00\00\44\00\00\00"
  "\00\00\00\f4\7f\bd\0b\8c\80\80\80\00\00\44\ff\ff"
  "\ff\ff\ff\ff\ff\ff\bd\0b\8c\80\80\80\00\00\44\bc"
  "\9a\78\56\34\12\f0\7f\bd\0b\8c\80\80\80\00\00\44"
  "\09\08\07\06\05\04\f3\7f\bd\0b\8c\80\80\80\00\00"
  "\44\45\23\01\ef\cd\ab\f2\ff\bd\0b\8c\80\80\80\00"
  "\00\44\00\00\00\00\00\00\f0\7f\bd\0b\8c\80\80\80"
  "\00\00\44\00\00\00\00\00\00\f0\7f\bd\0b\8c\80\80"
  "\80\00\00\44\00\00\00\00\00\00\f0\ff\bd\0b\8c\80"
  "\80\80\00\00\44\00\00\00\00\00\00\00\00\bd\0b\8c"
  "\80\80\80\00\00\44\00\00\00\00\00\00\00\00\bd\0b"
  "\8c\80\80\80\00\00\44\00\00\00\00\00\00\00\80\bd"
  "\0b\8c\80\80\80\00\00\44\18\2d\44\54\fb\21\19\40"
  "\bd\0b\8c\80\80\80\00\00\44\01\00\00\00\00\00\00"
  "\00\bd\0b\8c\80\80\80\00\00\44\00\00\00\00\00\00"
  "\10\00\bd\0b\8c\80\80\80\00\00\44\ff\ff\ff\ff\ff"
  "\ff\0f\00\bd\0b\8c\80\80\80\00\00\44\ff\ff\ff\ff"
  "\ff\ff\ef\7f\bd\0b\8c\80\80\80\00\00\44\00\00\00"
  "\00\00\00\30\46\bd\0b\8c\80\80\80\00\00\44\00\00"
  "\00\00\00\00\00\00\bd\0b\8c\80\80\80\00\00\44\00"
  "\00\00\00\00\00\00\00\bd\0b\8c\80\80\80\00\00\44"
  "\00\00\00\00\00\00\00\80\bd\0b\8c\80\80\80\00\00"
  "\44\18\2d\44\54\fb\21\19\40\bd\0b\8c\80\80\80\00"
  "\00\44\01\00\00\00\00\00\00\00\bd\0b\8c\80\80\80"
  "\00\00\44\00\00\00\00\00\00\10\00\bd\0b\8c\80\80"
  "\80\00\00\44\ff\ff\ff\ff\ff\ff\0f\00\bd\0b\8c\80"
  "\80\80\00\00\44\ff\ff\ff\ff\ff\ff\ef\7f\bd\0b\8c"
  "\80\80\80\00\00\44\7d\c3\94\25\ad\49\b2\54\bd\0b"
  "\87\80\80\80\00\00\43\00\24\74\49\0b\87\80\80\80"
  "\00\00\43\00\00\7a\44\0b\87\80\80\80\00\00\43\10"
  "\c9\7a\44\0b\87\80\80\80\00\00\43\96\19\61\58\0b"
  "\87\80\80\80\00\00\43\74\ae\1d\6e\0b\87\80\80\80"
  "\00\00\43\0a\f0\20\4d\0b\87\80\80\80\00\00\43\80"
  "\07\d5\47\0b\87\80\80\80\00\00\43\f1\ff\20\47\0b"
  "\87\80\80\80\00\00\43\00\00\f0\49\0b\87\80\80\80"
  "\00\00\43\28\c0\ab\55\0b\8b\80\80\80\00\00\44\00"
  "\00\00\00\80\84\2e\41\0b\8b\80\80\80\00\00\44\00"
  "\00\00\00\00\40\8f\40\0b\8b\80\80\80\00\00\44\00"
  "\8b\fc\fa\21\59\8f\40\0b\8b\80\80\80\00\00\44\45"
  "\cc\b7\5b\73\5c\d0\26\0b\8b\80\80\80\00\00\44\9c"
  "\de\5b\72\ce\b5\c3\45\0b\8b\80\80\80\00\00\44\32"
  "\33\01\00\1e\e0\25\43\0b\8b\80\80\80\00\00\44\00"
  "\00\00\00\f0\a0\fa\40\0b\8b\80\80\80\00\00\44\40"
  "\b3\34\28\fe\1f\e4\40\0b\8b\80\80\80\00\00\44\00"
  "\00\00\00\00\00\3e\41\0b\8b\80\80\80\00\00\44\00"
  "\70\9f\0f\05\78\b5\42\0b"
)
(assert_return (invoke "f32.nan") (i32.const 2143289344))
(assert_return (invoke "f32.positive_nan") (i32.const 2143289344))
(assert_return (invoke "f32.negative_nan") (i32.const -4194304))
(assert_return (invoke "f32.plain_nan") (i32.const 2143289344))
(assert_return
  (invoke "f32.informally_known_as_plain_snan")
  (i32.const 2141192192)
)
(assert_return (invoke "f32.all_ones_nan") (i32.const -1))
(assert_return (invoke "f32.misc_nan") (i32.const 2139169605))
(assert_return (invoke "f32.misc_positive_nan") (i32.const 2142257232))
(assert_return (invoke "f32.misc_negative_nan") (i32.const -5587746))
(assert_return (invoke "f32.infinity") (i32.const 2139095040))
(assert_return (invoke "f32.positive_infinity") (i32.const 2139095040))
(assert_return (invoke "f32.negative_infinity") (i32.const -8388608))
(assert_return (invoke "f32.zero") (i32.const 0))
(assert_return (invoke "f32.positive_zero") (i32.const 0))
(assert_return (invoke "f32.negative_zero") (i32.const -2147483648))
(assert_return (invoke "f32.misc") (i32.const 1086918619))
(assert_return (invoke "f32.min_positive") (i32.const 1))
(assert_return (invoke "f32.min_normal") (i32.const 8388608))
(assert_return (invoke "f32.max_subnormal") (i32.const 8388607))
(assert_return (invoke "f32.max_finite") (i32.const 2139095039))
(assert_return (invoke "f32.trailing_dot") (i32.const 1149239296))
(assert_return (invoke "f32_dec.zero") (i32.const 0))
(assert_return (invoke "f32_dec.positive_zero") (i32.const 0))
(assert_return (invoke "f32_dec.negative_zero") (i32.const -2147483648))
(assert_return (invoke "f32_dec.misc") (i32.const 1086918619))
(assert_return (invoke "f32_dec.min_positive") (i32.const 1))
(assert_return (invoke "f32_dec.min_normal") (i32.const 8388608))
(assert_return (invoke "f32_dec.max_subnormal") (i32.const 8388607))
(assert_return (invoke "f32_dec.max_finite") (i32.const 2139095039))
(assert_return (invoke "f32_dec.trailing_dot") (i32.const 1343554297))
(assert_return (invoke "f64.nan") (i64.const 9221120237041090560))
(assert_return (invoke "f64.positive_nan") (i64.const 9221120237041090560))
(assert_return (invoke "f64.negative_nan") (i64.const -2251799813685248))
(assert_return (invoke "f64.plain_nan") (i64.const 9221120237041090560))
(assert_return
  (invoke "f64.informally_known_as_plain_snan")
  (i64.const 9219994337134247936)
)
(assert_return (invoke "f64.all_ones_nan") (i64.const -1))
(assert_return (invoke "f64.misc_nan") (i64.const 9218888453225749180))
(assert_return (invoke "f64.misc_positive_nan") (i64.const 9219717281780008969))
(assert_return (invoke "f64.misc_negative_nan") (i64.const -3751748707474619))
(assert_return (invoke "f64.infinity") (i64.const 9218868437227405312))
(assert_return (invoke "f64.positive_infinity") (i64.const 9218868437227405312))
(assert_return (invoke "f64.negative_infinity") (i64.const -4503599627370496))
(assert_return (invoke "f64.zero") (i64.const 0))
(assert_return (invoke "f64.positive_zero") (i64.const 0))
(assert_return (invoke "f64.negative_zero") (i64.const -9223372036854775808))
(assert_return (invoke "f64.misc") (i64.const 4618760256179416344))
(assert_return (invoke "f64.min_positive") (i64.const 1))
(assert_return (invoke "f64.min_normal") (i64.const 4503599627370496))
(assert_return (invoke "f64.max_subnormal") (i64.const 4503599627370495))
(assert_return (invoke "f64.max_finite") (i64.const 9218868437227405311))
(assert_return (invoke "f64.trailing_dot") (i64.const 5057542381537067008))
(assert_return (invoke "f64_dec.zero") (i64.const 0))
(assert_return (invoke "f64_dec.positive_zero") (i64.const 0))
(assert_return
  (invoke "f64_dec.negative_zero")
  (i64.const -9223372036854775808)
)
(assert_return (invoke "f64_dec.misc") (i64.const 4618760256179416344))
(assert_return (invoke "f64_dec.min_positive") (i64.const 1))
(assert_return (invoke "f64_dec.min_normal") (i64.const 4503599627370496))
(assert_return (invoke "f64_dec.max_subnormal") (i64.const 4503599627370495))
(assert_return (invoke "f64_dec.max_finite") (i64.const 9218868437227405311))
(assert_return (invoke "f64_dec.trailing_dot") (i64.const 6103021453049119613))
(assert_return (invoke "f32-dec-sep1") (f32.const 0x1.e848p+19))
(assert_return (invoke "f32-dec-sep2") (f32.const 0x1.f4p+9))
(assert_return (invoke "f32-dec-sep3") (f32.const 0x1.f5922p+9))
(assert_return (invoke "f32-dec-sep4") (f32.const 0x1.c2332cp+49))
(assert_return (invoke "f32-dec-sep5") (f32.const 0x1.3b5ce8p+93))
(assert_return (invoke "f32-hex-sep1") (f32.const 0x1.41e014p+27))
(assert_return (invoke "f32-hex-sep2") (f32.const 0x1.aa0fp+16))
(assert_return (invoke "f32-hex-sep3") (f32.const 0x1.41ffe2p+15))
(assert_return (invoke "f32-hex-sep4") (f32.const 0x1.ep+20))
(assert_return (invoke "f32-hex-sep5") (f32.const 0x1.57805p+44))
(assert_return (invoke "f64-dec-sep1") (f64.const 0x1.e848p+19))
(assert_return (invoke "f64-dec-sep2") (f64.const 0x1.f4p+9))
(assert_return (invoke "f64-dec-sep3") (f64.const 0x1.f5921fafc8bp+9))
(assert_return (invoke "f64-dec-sep4") (f64.const 0x1.05c735bb7cc45p-402))
(assert_return (invoke "f64-dec-sep5") (f64.const 0x1.3b5ce725bde9cp+93))
(assert_return (invoke "f64-hex-sep1") (f64.const 0x1.5e01e00013332p+51))
(assert_return (invoke "f64-hex-sep2") (f64.const 0x1.aa0fp+16))
(assert_return (invoke "f64-hex-sep3") (f64.const 0x1.41ffe2834b34p+15))
(assert_return (invoke "f64-hex-sep4") (f64.const 0x1.ep+20))
(assert_return (invoke "f64-hex-sep5") (f64.const 0x1.578050f9f7p+44))
(module binary
  "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
  "\00\01\7c\03\82\80\80\80\00\01\00\07\8e\80\80\80"
  "\00\01\0a\34\32\39\34\39\36\37\32\34\39\00\00\0a"
  "\91\80\80\80\00\01\8b\80\80\80\00\00\44\00\00\20"
  "\fa\ff\ff\ef\41\0b"
)
(assert_return (invoke "4294967249") (f64.const 0x1.ffffffa2p+31))
(assert_malformed
  (module quote "(global f32 (f32.const _100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const +_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const -_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 99_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1__000))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const _1.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1.0_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1_.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1._0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const _1e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1e1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1_e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1e_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const _1.0e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1.0e1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1.0_e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1.0e_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1.0e+_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 1.0e_+1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const _0x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0_x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x00_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0xff__ffff))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x_1.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1.0_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1_.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1._0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x_1p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1p1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1_p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1p_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x_1.0p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1.0p1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1.0_p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1.0p_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1.0p+_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f32 (f32.const 0x1.0p_+1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const _100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const +_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const -_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 99_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1__000))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const _1.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1.0_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1_.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1._0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const _1e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1e1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1_e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1e_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const _1.0e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1.0e1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1.0_e1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1.0e_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1.0e+_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 1.0e_+1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const _0x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0_x100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x_100))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x00_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0xff__ffff))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x_1.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1.0_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1_.0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1._0))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x_1p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1p1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1_p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1p_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x_1.0p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1.0p1_))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1.0_p1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1.0p_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1.0p+_1))")
  "unknown operator"
)
(assert_malformed
  (module quote "(global f64 (f64.const 0x1.0p_+1))")
  "unknown operator"
)
